Mon Nov 12 13:57:39 2007  Tanaka Akira  <akr@fsij.org>

	* configure.in (MINIDLNOBJS): removed.
	  (MINIOBJS): set to dln.o if dmydln.o is not used.

	* Makefile.in (miniruby): use MINIOBJS instead of MINIDLNOBJS.

Mon Nov 12 13:53:06 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* misc/ruby-mode.el (ruby-parse-partial): handle stringified
	  symbols properly using ruby-forward-string.

Mon Nov 12 12:17:59 2007  Tanaka Akira  <akr@fsij.org>

	* configure.in (MINIDLNOBJS): defined.

	* Makefile.in (miniruby): use MINIDLNOBJS and COMMONOBJS instead of
	  MINIOBJS and OBJS to avoid linking both dmydln.o and dln.o.

Sun Nov 11 20:32:45 2007  Tanaka Akira  <akr@fsij.org>

	* {win32,wince,bcc32}/Makefile.sub: delete lex.c rule.

Sun Nov 11 19:40:52 2007  Tanaka Akira  <akr@fsij.org>

	* Makefile.in (lex.c): simplified.

Sun Nov 11 18:31:48 2007  Tanaka Akira  <akr@fsij.org>

	* Makefile.in (lex.c): touch lex.c if gperf failed but lex.c exists.
	  Although this may cause non-updated lex.c,
	  svn co may generate keywords newer than lex.c especially on
	  a file system which can record fractional mtime such as XFS.

Sun Nov 11 17:32:46 2007  Shugo Maeda  <shugo@ruby-lang.org>

	* insnhelper.ci (vm_call_method): pass mn->nd_clss to
	  vm_call_cfunc() instead of klass.

	* vm.c (rb_thread_method_id_and_klass): traverse parent_iseq.
	
	* thread.c (call_trace_proc): use rb_thread_method_id_and_klass().

Sun Nov 11 16:54:25 2007  Tanaka Akira  <akr@fsij.org>

	* lex.c: renamed from lex.c.blt.

	* Makefile.in (lex.c): use find command to check mtime.

Sun Nov 11 05:34:13 2007  Eric Hodel  <drbrain@segment7.net>

	* bin/gem: Add forgotten gem command.

Sat Nov 10 23:50:31 2007  Tanaka Akira  <akr@fsij.org>

	* string.c (tr_trans): cast to unsigned char after dereference
	  a pointer to a char to avoid SEGV with "\377".tr("a", "b").
	  on FreeBSD/amd64.

Sat Nov 10 23:08:53 2007  Tanaka Akira  <akr@fsij.org>

	* configure.in, common.mk, Makefile.in: don't generate